unified_tests/literals/string_interpolation_with_unterminated_expression/expect/build.text.stderr
lib.copp:2:20: error: unterminated string literal
      return "hello {"
                     ^
lib.copp:3:1: error: unterminated string literal
  }
  ^
lib.copp:4:1: error: expected symbol
  
